use an explicit contactus path in url

--- a/stack.yml
+++ b/stack.yml
@@ -62,8 +62,8 @@ Resources:
         PostEvent:
           Type: Api
           Properties:
-            Path: /
-            Method: post
+            Path: /contactus
+            Method: POST
       Environment:
         Variables:
           ReCaptchaSecret: !Ref ReCaptchaSecret
